# Scalabale-Off-Board-AI-Perception-Engine

./: .gitignore  README.md  start.sh  stop.sh
install/module3_ros2/lib/module3_ros2/: fleet_manager  obstacle_avoider  robot_node
install/module3_ros2/share/module3_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/module3_ros2/share/module3_ros2/launch/: simulation.launch.py
install/module3_ros2/share/module3_ros2/worlds/: obstacle_world.world
log/: latest_build
module1_inference/: CMakeLists.txt
module1_inference/include/: inference_server.hpp  model_runner.hpp
module1_inference/src/: inference_server.cpp  main.cpp  model_runner.cpp
module1_inference/tests/: CMakeLists.txt  test_model_runner.cpp
module2_middleware/: CMakeLists.txt
module2_middleware/include/: middleware_server.hpp  thread_pool.hpp
module2_middleware/src/: main.cpp  middleware_server.cpp  thread_pool.cpp
module2_middleware/tests/: CMakeLists.txt  test_thread_pool.cpp
module3_ros2/: package.xml  setup.cfg  setup.py
module3_ros2/launch/: simulation.launch.py
module3_ros2/module3_ros2/: fleet_manager.py  inference_pb2.py  obstacle_avoider.py
module3_ros2/worlds/: obstacle_world.world
proto/: inference.proto
