<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>module3_ros2</name>
  <version>0.1.0</version>
  <description>
    Module 3: Robot simulation, fleet orchestration, and obstacle avoidance.
    Spawns 3+ differential-drive robots in Gazebo, streams RGB+Depth frames
    to the middleware (Module 2) via gRPC, and translates detection responses
    into geometry_msgs/Twist velocity commands.
  </description>
  <maintainer email="team@example.com">CSC591 Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-grpcio-tools</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
